# ros2_ws

./: package.xml  setup.py
minimal_opcua_test/: minimal_opcua_node.py  package.xml  setup.cfg  setup.py
minimal_opcua_test/minimal_opcua_test/: min_opcua_connect_only.py  min_write_jointstates.py  min_write_jointstates1.py  min_write_once_only.py  min_write_onyl.py  min_write_read.py  min_write_read_jointstates2.py  min_write_read_jointstates3.py  min_write_read_jointstates4.py  min_write_read_jointstates5.py  min_write_read_jointstates6.py  min_write_read_jointstates7.py  min_write_read_jointstates8.py  min_write_read_jointstates9.py  min_write_read_jointststates10.py  min_write_read_pose.py
my_cpp_pkg/: package.xml
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  code_template.py  compute_area.py  hw_status_publisher.py  led_panel.py  my_first_node.py  number_publisher.py  plc_laptop_rd_wr.py  plc_laptop_rd_wr_chat.py  plc_laptop_read.py  plc_laptop_read_chat.py  plccomm.py  plccomm2.py  readdata.py  robots_news_station.py  smartphone.py  summernode.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: number_app.launch.py  robot_news.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: ActivateRobot.msg  Turtle.msg
my_xarm_control/: package.xml  setup.cfg  setup.py
my_xarm_control/my_xarm_control/: xarm_motion_planner1.py
turtlesim_catch_them_all/: package.xml  setup.py
turtlesim_catch_them_all/turtlesim_catch_them_all/: turtle_controller.py  turtle_spawner.py
